Allow any URL to be added to the classpath
svn path=/trunk/playground/bindings/krossjava/; revision=672655